istio-1.23.2/bookinfo-udayacademy/uday-virtualservice-bookinfo.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: uday-virtualservice-bookinfo
spec:
  hosts:
  - "uday.bookinfo"
  gateways:
  - uday-gateway-bookinfo
  http:
  - match:
    - uri:
        exact: /productpage
    - uri:
        prefix: /static
    - uri:
        exact: /login
    - uri:
        exact: /logout
    - uri:
        prefix: /api/v1/products
    route:
    - destination:
        host: productpage
        port:
          number: 9080
