istio-1.23.2/bookinfo-udayacademy/uday-virtualservice-reviews.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: reviews
spec:
  hosts:
    - reviews
  http:
    - match:
        - uri:
            prefix: /reviews
      route:
        - destination:
            host: reviews
            subset: v1
          weight: 75
    - route:
        - destination:
            host: reviews
            subset: v2
          weight: 25
